--- a/1.html
+++ b/1.html
@@ -45,7 +45,7 @@ body, html {
 .main-heading {
   font-family: myFirstFont;
   color: #FFD700;
-  font-size: 6vw;
+  font-size: 70px;
 }
 nav {
   background-color: rgba(11, 3, 60, 0.8);
@@ -57,7 +57,7 @@ nav a {
   font-family: "Krona One", sans-serif;
   margin: 0 15px;
   text-decoration: none;
-  font-size: 2vw;
+  font-size: 1.8vw;
 }
 nav a:hover {
   color: aliceblue;
@@ -92,7 +92,7 @@ nav a:hover {
     color: aliceblue;
     font-family: myFirstFont;
     font-weight: 500;
-    font-size: 3.5vw;
+    font-size: 40px;
     background-color: rgba(11, 3, 60, 0.5);
     text-align: center;
     display: flex;
@@ -134,14 +134,14 @@ nav a:hover {
     text-align: center;
     font-family: "Krona One", "sans-serif";
     padding-top: 10%;
-    font-size: 1.3vw;
+    font-size: 20px;
     color: aliceblue;
 }
 .normal-text {
     text-align: center;
     font-family: "Kalam", "cursive";
     padding-top: 9%;
-    font-size: 1vw;
+    font-size: 17px;
     font-weight: 500;
     color: aliceblue;
 }
